Fixed height of Banner on mobile-media.

--- a/src/components/Banner/styles.module.css
+++ b/src/components/Banner/styles.module.css
@@ -1,6 +1,6 @@
 .content {
   position: relative;
-  padding: 130px 48px 130px 24px;
+  padding: 131px 48px 130px 24px;
   color: var(--light);
   text-align: center;
 }
